Fix WhatsApp link in index.html

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Book Free Consultation
 Email Now
 </a>
 
-<a href="https://wa.me/91YOURNUMBER" class="button whatsapp">
+<a href="https://wa.me/918299298353" class="button whatsapp">
 WhatsApp Chat
 </a>
 
